# pl_search_cpp

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  engine.cpp  mainpage.dox  pred.cpp  term.cpp  term.hpp  test.cpp
docs/html/: annotated.html  choice__iterator_8hpp.html  choice__iterator_8hpp__dep__incl.map  choice__iterator_8hpp__dep__incl.md5  choice__iterator_8hpp__incl.map  choice__iterator_8hpp__incl.md5  choice__iterator_8hpp_source.html  classes.html  classpl__search_1_1CList-members.html  classpl__search_1_1CList.html  classpl__search_1_1CList__coll__graph.map  classpl__search_1_1CList__coll__graph.md5  classpl__search_1_1CList__inherit__graph.map  classpl__search_1_1ChoiceIterator-members.html  classpl__search_1_1ChoiceIterator.html  classpl__search_1_1ChoiceIterator__inherit__graph.map  classpl__search_1_1ChoiceIterator__inherit__graph.md5  classpl__search_1_1ChoicePred-members.html  classpl__search_1_1ChoicePred.html  classpl__search_1_1ChoicePred__coll__graph.map  classpl__search_1_1ChoicePred__coll__graph.md5  classpl__search_1_1ChoicePred__inherit__graph.map  classpl__search_1_1ChoicePred__inherit__graph.md5  classpl__search_1_1Cut-members.html  classpl__search_1_1Cut.html  classpl__search_1_1Cut__coll__graph.map  classpl__search_1_1Cut__coll__graph.md5  classpl__search_1_1Cut__inherit__graph.map  classpl__search_1_1Cut__inherit__graph.md5  classpl__search_1_1DetPred-members.html  classpl__search_1_1DetPred.html  classpl__search_1_1DetPred__coll__graph.map  classpl__search_1_1DetPred__coll__graph.md5  classpl__search_1_1DetPred__inherit__graph.map  classpl__search_1_1DetPred__inherit__graph.md5  classpl__search_1_1DisjPred-members.html  classpl__search_1_1DisjPred.html  classpl__search_1_1DisjPred__coll__graph.map  classpl__search_1_1DisjPred__coll__graph.md5  classpl__search_1_1DisjPred__inherit__graph.map  (+211 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_a.js  defines_0.js  files_0.js  files_3.js  files_4.js  (+40 more)
examples/: Makefile  append_pred.hpp  callgrind.out.11803  gmon.out  gmon.sum  prolog_list  prolog_list.cpp  prolog_list.hpp  send_more_money.cpp
html/: index.html  md_README.html  pages.html
html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  pages_1.js  searchdata.js
include/pl_search/: choice_iterator.hpp  clist.hpp  engine.hpp  patom.hpp  pfloat.hpp  pint.hpp  pred.hpp  pvar.hpp  term.hpp  typedefs.hpp
include/pl_search_cpp/: pint.hpp
latex/: index.tex  md_README.tex  refman.tex
src/: Makefile  clist.hpp  engine.cpp  engine.hpp  p_lessthan.cpp  patom.hpp  pfloat.hpp  pint.hpp  pred.cpp  pred.hpp  pvar.cpp  pvar.hpp  term.cpp  term.hpp
tests/: test_choice_pred.cpp  test_engine.cpp  test_pred.cpp  test_pvar.cpp  test_user_term.cpp
